--- a/po/cs.po
+++ b/po/cs.po
@@ -3529,7 +3529,7 @@ msgstr "CHYBA - prohledávání selhalo (%s)!"
 
 #, python-format
 msgid "ERROR downloading file %s"
-msgstr ""
+msgstr "CHYBA stažení souboru %s"
 
 #
 msgid "East"
@@ -3860,9 +3860,9 @@ msgid "Error"
 msgstr "Chyba"
 
 #
-#, fuzzy, python-format
+#, python-format
 msgid "Error %s"
-msgstr "Chyba"
+msgstr "Chyba %s"
 
 #
 msgid "Error code"
@@ -3898,13 +3898,10 @@ msgid "Error stop stream!"
 msgstr "Chyba při zrušení streamu!"
 
 msgid "Error when writing epg.dat on server"
-msgstr ""
+msgstr "Chyba při zapisování epg.dat na serveru"
 
-#, fuzzy
 msgid "Error while retreiving epg.dat from server"
-msgstr ""
-"Chyba při získávání informací ze záložního časovače\n"
-"%s"
+msgstr "Chyba při načítání epg.dat ze serveru"
 
 #, python-format
 msgid ""
@@ -3914,11 +3911,8 @@ msgstr ""
 "Chyba při získávání informací ze záložního časovače\n"
 "%s"
 
-#, fuzzy
 msgid "Error while retreiving location of epg.dat on server"
-msgstr ""
-"Chyba při získávání informací ze záložního časovače\n"
-"%s"
+msgstr "Chyba při načítání umístění epg.dat na serveru"
 
 #
 #, python-format
@@ -6224,7 +6218,7 @@ msgid "No displayable files on this medium found!"
 msgstr "Žádné zobrazitelné soubory na tomto médiu nebyly nalezeny!"
 
 msgid "No epg.dat file found server"
-msgstr ""
+msgstr "Na serveru nebyl nalezen soubor epg.dat"
 
 #
 msgid "No event info found, recording indefinitely."
@@ -6555,13 +6549,13 @@ msgid "Open the movie list"
 msgstr "Otevřít seznam filmů"
 
 msgid "Operating LED status in deep standby mode"
-msgstr ""
+msgstr "Stav provozní LED v hlubokém spánku."
 
 msgid "Operating LED status in standby mode"
-msgstr ""
+msgstr "Stav provozní LED v pohotovostním stavu."
 
 msgid "Operating LED status while running."
-msgstr ""
+msgstr "Stav provozní LED při provozu."
 
 msgid "Opkg"
 msgstr ""
@@ -8655,9 +8649,8 @@ msgid "Select the satellite your dish receives from. If you are unsure select 'a
 msgstr "Vyberte satelit na který je natočena Vaše parabola. Pokud si nejste jisti, vyberte možnost 'Automaticky' a přijímač se o to pokusí zjistit sám."
 
 #
-#, fuzzy
 msgid "Select the time zone within the area or region."
-msgstr "Zvolte horizontání rozlišení:"
+msgstr "Vyberte časové pásmo v oblasti nebo regionu."
 
 msgid "Select the tuner that controls the motorised dish."
 msgstr "Vyberte tuner který řídí natáčenou parabolu."
@@ -8731,9 +8724,8 @@ msgid "Select your region. If not available change 'Country' to 'all' and select
 msgstr "Vyberte svůj region. Není-li k dispozici, změňte 'Země' na 'Vše' a vyberte jednu z výchozích alternativ."
 
 #
-#, fuzzy
 msgid "Select your time zone area or region."
-msgstr "Zvolte horizontání rozlišení:"
+msgstr "Vyberte oblast nebo region Vašeho časového pásma."
 
 #
 msgid "Selecting satellites 1 (USALS)"
@@ -9994,15 +9986,14 @@ msgid "Switch channel up"
 msgstr "Přepnout kanál nahoru"
 
 msgid "Switch off the display during Standby Mode"
-msgstr ""
+msgstr "Vypnout display v pohotovostním režimu"
 
 msgid "Switch off the display during Suspend Mode"
-msgstr ""
+msgstr "Vypnout display v režimu pozastavení"
 
 #
-#, fuzzy
 msgid "Switch off the display during operation."
-msgstr "Zobrazit seznam rozšíření pro zobrazení a uživatelské rozhraní"
+msgstr "Vypnout display během provozu."
 
 msgid "Switch to TV mode"
 msgstr "Přepnout do TV módu"
@@ -10095,7 +10086,7 @@ msgstr ""
 "Pro případné korekce můžete kontaktovat autora\n"
 "na výše uvedené adrese.\n"
 "\n"
-"®29.2.2020"
+"®23.3.2020"
 
 #
 msgid "TS file is too large for ISO9660 level 1!"
@@ -10635,14 +10626,12 @@ msgid "Time scale"
 msgstr "Měřítko času"
 
 #
-#, fuzzy
 msgid "Time zone"
 msgstr "Časové pásmo"
 
 #
-#, fuzzy
 msgid "Time zone area"
-msgstr "Časové pásmo"
+msgstr "Zona časového pásma"
 
 #
 msgid "Timer"
@@ -11933,19 +11922,17 @@ msgstr "S chybami:"
 msgid "With popup"
 msgstr "S dialogem"
 
-#, fuzzy
 msgid "With this option you can switch off the display during operation."
-msgstr "Toto nastavení umožňuje vypnout displej."
+msgstr "Toto nastavení umožňuje vypnout display během provozu."
 
 msgid "With this option you can switch off the display in Deep Standby Mode."
-msgstr ""
+msgstr "Toto nastavení umožňuje vypnout displej v hlubokém spánku."
 
-#, fuzzy
 msgid "With this option you can switch off the display in Standby Mode."
-msgstr "Toto nastavení umožňuje vypnout displej."
+msgstr "Toto nastavení umožňuje vypnout displej v pohotovostním režimu."
 
 msgid "With this option you can switch the LED color or deactivate the LED."
-msgstr ""
+msgstr "Toto nastavení umožňuje přepnout barvu nebo deaktivovat LED."
 
 msgid "Without popup"
 msgstr "Bez dialogu"
