--- a/po/cs.po
+++ b/po/cs.po
@@ -10631,7 +10631,7 @@ msgstr "Časové pásmo"
 
 #
 msgid "Time zone area"
-msgstr "Zona časového pásma"
+msgstr "Zóna časového pásma"
 
 #
 msgid "Timer"
